2004-10-07  Matti Aarnio  <mea@zmailer.org>

	* man/smtpserver.8.in:
	    Document (in man-page) about the 'msgratelimit nn,mm'
	    syntax parameter.

	* smtpserver/subdaemons.c, smtpserver/smtpserver.h:
	    When having received a job from a peer, mark it in
	    a separate flag, and use that flag then to talk with
	    the processing subprograms.  Also switched back to
	    "serve first the lowest number peer fd" system.

2004-09-27  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/policytest.c, smtpserver/smtpserver.h,
	  smtpserver/subdaemon-trk.c:
	    A bit more of rate-limitter updates to complete things.
	    Rate-counters now return two values instead of one, recognize
	    that in policytest.  Moved  call_rate_counter() code into
	    subdaemon-trk.c, where it is a bit more "local" stuff.

2004-09-23  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/policytest.c:
	    Use rate-limiter ONLY to make REJECTs, don't use "not limited"
	    to mean: "acceptable!"

2004-09-21  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/mxverify.c, man/smtpserver.8.in:
	    Remove the old hard-coded '+' macro that is no longer valid..
	    Also warn about RBLs being rather ephemeral in nature..

	* smtpserver/policytest.c, smtpserver/subdaemon-trk.c:
	    Some initial experiments on adding RCPT counting in
	    rate-tracking.

	* smtpserver/subdaemon-rtr.c:
	    Report (into log) if the i-router subsystem response
	    time exceeds 30 seconds.

	* smtpserver/subdaemons.c:
	    Change a bit of the round-robinny processing details.
	    It may (or may not) improve sometimes observed long
	    delays..

2004-09-10  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/subdaemons.c:
	    Changed the client input pickup methodology back into
	    "prefer lowest slot" (instead of round-robin).
	    It just didn't work :-(  (probably broken logic
	    somewhere in there..)

	* smtpserver/smtpchild.c:
	    Account childs by type, not all together..  (oops..)
